# IntelliTrace

./: .gitignore  README.md
backend/: .env.example  alembic.ini  demo_ml.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_advanced_telemetry.py
backend/app/: __init__.py  main.py
backend/app/config/: constants.py  settings.py
backend/app/core/: __init__.py  dependencies.py  exceptions.py  security.py
backend/app/db/: __init__.py  base_model.py  database.py
backend/app/ml/: __init__.py
backend/app/ml/anomaly_detection/: __init__.py  model.py  predictor.py  trainer.py
backend/app/ml/person_verification/: __init__.py  features.py  model.py  predictor.py  trainer.py
backend/app/ml/shared/: __init__.py  model_manager.py  preprocessing.py  synthetic.py
backend/app/models/: __init__.py  alert.py  biometric_profile.py  device.py  telemetry.py  user.py
backend/app/routers/: __init__.py
backend/app/routers/alerts/: __init__.py  routes.py
backend/app/routers/analytics/: __init__.py  routes.py
backend/app/routers/auth/: __init__.py  routes.py
backend/app/routers/devices/: __init__.py  routes.py
backend/app/routers/telemetry/: __init__.py  routes.py
backend/app/routers/users/: __init__.py  routes.py
backend/app/schemas/: __init__.py  alerts.py  device.py  telemetry.py  user.py
backend/app/services/: health_monitor.py  location_service.py  notification_service.py
backend/tests/: __init__.py  test_health.py
dashboard/: api_client.py  app.py  requirements.txt  seed_demo.py
(+8 files in other folders)
